<resources>
    <string name="app_name">ProjectManager</string>
    <string name="test">test</string>
    <string name="subtext">subtext</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_subtext">Schedule your projects</string>
    <string name="CurrentTaskTitle">Ongoing tasks</string>
    <string name="ViewAll">View all</string>
    <string name="homeButton">Home</string>
    <string name="payment">Payment</string>
    <string name="tasks">Tasks</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="random_task">Random task</string>
    <string name="progress">Progress</string>
    <string name="percentageTest">50%</string>
    <string name="sample_date">June 26,2023</string>
</resources>